deploy-vpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cpu-app
  template:
    metadata:
      labels:
        app: cpu-app
    spec:
      containers:
      - name: app
        image: registry.access.redhat.com/ubi9/ubi
        command: ["/bin/bash", "-c"]
        args:
        - "while true; do dd if=/dev/zero of=/dev/null; done"
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
