deploy_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mangov1
#  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mango
  template:
    metadata:
      labels:
        app: mango
    spec:
      containers:
      - image: httpd:latest
        name: con1
        ports:
        - containerPort: 80
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mango-svc
#spec:
#  selector:
#    app: mango
#  ports:
#  - port: 80
#    protocol: TCP
#    targetPort: 80
#---
#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  name: mango-route
#spec:
#  port:
#    targetPort: 80
#  to:
#    kind: ""
#    name: mango-svc
#    weight: null
#
