pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
  name: mypod
spec:
#  serviceAccountName: test
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
