pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
  name: pvcpod
spec:
#  serviceAccountName: test
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /app
  volumes:
  - name: myvol
    persistentVolumeClaim: 
       claimName: myclaim
