mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mydb
  name: mydb
spec:
  containers:
  - name: con1
    image: mysql:latest
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
spec:
  selector:
    app: mydb
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
---
