svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
#  type: NodePort
  selector:
    app: myapp
    run: test
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
