ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mango
spec:
  rules:
  - host: mango.apps-crc.testing
    http:
      paths:
      - backend:
          service:
            name: mango
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
