nginx-template.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  app: ${NAME}
  template: ${NAME}
message: |-
  The following service(s) have been created in your project: ${NAME}.

  For more information about using this template, including OpenShift considerations, see https://github.com/sclorg/nginx-ex/blob/master/README.md.
metadata:
  annotations:
    description: An example Nginx HTTP server and a reverse proxy (nginx) application
      that serves static content. For more information about using this template,
      including OpenShift considerations, see https://github.com/sclorg/nginx-ex/blob/master/README.md.
    iconClass: icon-nginx
    openshift.io/display-name: Nginx HTTP server and a reverse proxy
    openshift.io/documentation-url: https://github.com/sclorg/nginx-ex
    openshift.io/long-description: This template defines resources needed to develop
      a static application served by Nginx HTTP server and a reverse proxy (nginx),
      including a build configuration and application deployment configuration.
    openshift.io/provider-display-name: Red Hat, Inc.
    openshift.io/support-url: https://access.redhat.com
    samples.operator.openshift.io/version: 4.21.8
    tags: quickstart,nginx
  labels:
    samples.operator.openshift.io/managed: "true"
  name: nginx-example
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    name: ${NAME}
  spec:
    ports:
    - name: web
      port: 80
      targetPort: 80
    selector:
      name: ${NAME}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
    name: ${NAME}
  spec:
    host: ${APPLICATION_DOMAIN}
    to:
      kind: Service
      name: ${NAME}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      description: Defines how to deploy the application server
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"${NAME}:latest"},"fieldPath":
        "spec.template.spec.containers[0].image"}]'
      template.alpha.openshift.io/wait-for-ready: "true"
    name: ${NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: ${NAME}
        name: ${NAME}
    strategy:
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: ${NAME}
          name: ${NAME}
      spec:
        containers:
        - env: []
          image: ${IMAGE}
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 3
          name: nginx-example
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 3
          resources:
            limits:
              memory: ${MEMORY_LIMIT}
parameters:
- description: The name assigned to all of the frontend objects defined in this template.
  displayName: Name
  name: NAME
  required: true
  value: nginx-example
- description: The name assigned to all of the frontend objects defined in this template.
  displayName: Image
  name: IMAGE
  required: true
  value: nginx:latest
- description: The OpenShift Namespace where the ImageStream resides.
  displayName: Namespace
  name: NAMESPACE
  required: true
  value: openshift
- description: Version of NGINX image to be used (1.20-ubi8 by default).
  displayName: NGINX Version
  name: NGINX_VERSION
  required: true
  value: 1.20-ubi8
- description: Maximum amount of memory the container can use.
  displayName: Memory Limit
  name: MEMORY_LIMIT
  required: true
  value: 512Mi
- description: The URL of the repository with your application source code.
  displayName: Git Repository URL
  name: SOURCE_REPOSITORY_URL
  required: true
  value: https://github.com/sclorg/nginx-ex.git
- description: Set this to a branch name, tag or other ref of your repository if you
    are not using the default branch.
  displayName: Git Reference
  name: SOURCE_REPOSITORY_REF
- description: Set this to the relative path to your project if it is not in the root
    of your repository.
  displayName: Context Directory
  name: CONTEXT_DIR
- description: The exposed hostname that will route to the nginx service, if left
    blank a value will be defaulted.
  displayName: Application Hostname
  name: APPLICATION_DOMAIN
- description: Github trigger secret.  A difficult to guess string encoded as part
    of the webhook URL.  Not encrypted.
  displayName: GitHub Webhook Secret
  from: '[a-zA-Z0-9]{40}'
  generate: expression
  name: GITHUB_WEBHOOK_SECRET
- description: A secret string used to configure the Generic webhook.
  displayName: Generic Webhook Secret
  from: '[a-zA-Z0-9]{40}'
  generate: expression
  name: GENERIC_WEBHOOK_SECRET
