route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: test
    weight: null
