wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  containers:
  - name: con1
    image: wordpress:latest
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: 64Mi
        cpu: 100m
      limits:
        memory: 512Mi
        cpu: 1000m
  - name: con2
    image: mysql:latest
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: wordpress-svc
    weight: null
